[package]
name = "openzwave-adapter"
version = "0.1.0"
authors = ["Julien Wajsberg <felash@gmail.com>"]

[dependencies]
openzwave-stateful = { git = "https://github.com/fxbox/openzwave-stateful-rust" }
# TODO before merge: Link with master instead of fork
foxbox_taxonomy = { git = "https://github.com/JohanLorenzo/taxonomy.git", rev = "4af5903" }
transformable_channels = "^0.1"
log = "^0.3"
