[package]
name = "openzwave-adapter"
version = "0.1.0"
authors = ["Julien Wajsberg <felash@gmail.com>"]

[dependencies]
openzwave-stateful = { git = "https://github.com/fxbox/openzwave-stateful-rust", branch = "demo-2016-04-19" }
foxbox_taxonomy = { git = "https://github.com/fxbox/taxonomy.git", branch = "demo-2016-04-19" }
transformable_channels = "^0.1"
log = "^0.3"
